M1 (Add treasure component & h3 treasure-name)

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div id='treasure-header' class='navbar navbar-expand-lg navbar-dark bg-dark'>
     <h1 class='navbar-brand'>
-        Topcoder Angular Level 1
+        Topcoder Angular Level 2
     </h1>
 </div>
+<app-treasure></app-treasure>
