--- a/src/app/treasure/treasure.component.html
+++ b/src/app/treasure/treasure.component.html
@@ -1,8 +1,17 @@
-<h3>{{treasure.name}} Details</h3>
-<!-- <div id="treasure-details" class="container-fluid">
-    <ul class="list-group">
-        <li class="list-group-item"><h3>{{treasure.name}} Details</h3></li>
-        <li class="list-group-item"><h3>{{treasure.name}} Details</h3></li>
-        <li class="list-group-item"><h3>{{treasure.name}} Details</h3></li>
-      </ul>
-</div> -->
+<div id="treasure-details" class="container-fluid">
+  <h3>{{treasure.name}} Details</h3>
+  <ul class="list-group">
+      <li class="list-group-item">
+        <label for="treasure-id"><b>Id:</b></label>
+        <span id="treasure-id">{{treasure.id}}</span>
+      </li>
+      <li class="list-group-item">
+        <label for="treasure-name">Name:</label><br>
+        <input id="treasure-name" type="text" [(ngModel)]="treasure.name">
+      </li>
+      <li class="list-group-item">
+        <label for="treasure-location">Location:</label>
+        <span id="treasure-location">{{treasure.location}}</span>
+      </li>
+    </ul>
+</div>
