--- a/src/app/treasure/treasure.component.html
+++ b/src/app/treasure/treasure.component.html
@@ -15,3 +15,9 @@
       </li>
     </ul>
 </div>
+
+<div id="list" class="container-fluid">
+  <h2>
+    <title>My Treasure</title>
+  </h2>
+</div>
