H2 (display name list & onclick display details)

--- a/src/app/treasure/treasure.component.html
+++ b/src/app/treasure/treasure.component.html
@@ -1,4 +1,32 @@
-<div id="treasure-details" class="container-fluid">
+<div id="treasure-list" class="container-fluid">
+  <h2>My Treasure</h2>
+  <ul class="list-group">
+    <li class="list-group-item list-group-item-action" *ngFor="let treasure of treasures" [class.selected]="treasure === selectedTreasure" (click)="onSelect(treasure)">{{treasure.name}}</li>
+  </ul>
+
+  <hr class="divider">
+
+  <div *ngIf="selectedTreasure">
+    <h2>{{selectedTreasure.name | uppercase}} Details</h2>
+    <ul class="list-group">
+      <li class="list-group-item">Id: {{selectedTreasure.id}}</li>
+      <li class="list-group-item">
+        <label for="treasure-name">Name:</label><br>
+        <input id="treasure-name" class="form-control" [(ngModel)]="selectedTreasure.name"
+        placeholder="name">
+      </li>
+      <li class="list-group-item">Location: {{selectedTreasure.location}}</li>
+    </ul>
+  </div>
+</div>
+
+
+
+
+
+
+
+<!-- <div id="treasure-details" class="container-fluid">
   <h3>{{treasure.name}} Details</h3>
   <ul class="list-group">
       <li class="list-group-item">
@@ -14,10 +42,4 @@
         <span id="treasure-location">{{treasure.location}}</span>
       </li>
     </ul>
-</div>
-
-<div id="list" class="container-fluid">
-  <h2>
-    <title>My Treasure</title>
-  </h2>
-</div>
+</div> -->
