--- a/src/app/treasure/treasure.component.html
+++ b/src/app/treasure/treasure.component.html
@@ -1,4 +1,4 @@
-<div id="treasure-list" class="container-fluid">
+<div id="list" class="container-fluid">
   <h2>My Treasure</h2>
   <ul class="list-group">
     <li class="list-group-item list-group-item-action" *ngFor="let treasure of treasures"
