remove unnecessary bold element

--- a/src/app/treasure/treasure.component.html
+++ b/src/app/treasure/treasure.component.html
@@ -2,7 +2,7 @@
   <h3>{{treasure.name}} Details</h3>
   <ul class="list-group">
       <li class="list-group-item">
-        <label for="treasure-id"><b>Id:</b></label>
+        <label for="treasure-id">Id:</label>
         <span id="treasure-id">{{treasure.id}}</span>
       </li>
       <li class="list-group-item">
