add type text to input element

--- a/src/app/treasure/treasure.component.html
+++ b/src/app/treasure/treasure.component.html
@@ -16,7 +16,7 @@
       </li>
       <li class="list-group-item">
         <label for="treasure-name">Name:</label><br>
-        <input id="treasure-name" class="form-control" [(ngModel)]="treasure.name" placeholder="name">
+        <input id="treasure-name" type="text" [(ngModel)]="treasure.name">
       </li>
       <li class="list-group-item">
         <label for="treasure-location">Location:</label>
